--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@ header {
   text-align: center;
   background-color: #333333;
   color: white;
-  height: 280px;
+  height: 300px;
 }
 
 header h1 {
@@ -51,6 +51,16 @@ nav ul li {
   letter-spacing: 2px;
 }
 
+nav ul li a {
+  color: white;
+  text-decoration: none;
+  transition: all 300ms linear;
+}
+
+nav ul li a:hover {
+  color: #ffc800;
+}
+
 #btnUp {
   display: none;
   position: fixed;
@@ -83,5 +93,95 @@ nav ul li {
 #contacto h1 {
   font-family: 'Montserrat', sans-serif;
   font-weight: bold;
-  min-height: 500px;
+  letter-spacing: 4px;
+  /* min-height: 500px; */
+}
+
+#skillset {
+  background-color: #00bdd6;
+  color: white;
+}
+
+#card-container {
+  grid-template-columns: 33.33% 33.33% 33.33%;
+  justify-content: center;
+  align-items: center;
+}
+
+.card {
+  margin-left: 16.5%;
+  text-align: center;
+  cursor: pointer;
+  transition: all 400ms;
+}
+.card:hover {
+  box-shadow: 2px 2px 6px 0px rgb(0 0 0 / 30%);
+}
+
+#skills-container {
+  grid-gap: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  margin: 1rem;
+}
+
+#skills-container div {
+  position: relative;
+}
+
+#skills-container img {
+  border-radius: 1rem;
+  cursor: context-menu;
+  max-width: 7rem;
+  cursor: pointer;
+}
+
+/* Media Queries */
+
+@media only screen and (max-width: 1399px) {
+  .card {
+    margin-left: 9%;
+  }
+}
+
+@media only screen and (max-width: 1199px) {
+  .card {
+    margin-left: 3%;
+  }
+}
+
+@media only screen and (max-width: 991px) {
+  #card-container {
+    grid-template-columns: 50% 50%;
+  }
+  .card {
+    margin-left: 6.5%;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  #card-container {
+    grid-template-columns: 100%;
+  }
+  .card {
+    margin-left: 20%;
+  }
+}
+
+@media only screen and (max-width: 575px) {
+  .card {
+    margin-left: 21.5%;
+  }
+}
+
+@media only screen and (max-width: 513px) {
+  .card {
+    margin-left: 19.5%;
+  }
+}
+
+@media only screen and (max-width: 469px) {
+  .card {
+    margin-left: 16%;
+  }
 }
