--- a/css/main.css
+++ b/css/main.css
@@ -100,6 +100,7 @@ nav ul li a:hover {
 #skillset {
   background-color: #00bdd6;
   color: white;
+  /*   margin-bottom: 50px; */
 }
 
 #card-container {
@@ -123,6 +124,8 @@ nav ul li a:hover {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   margin: 1rem;
+  padding-bottom: 3rem;
+  padding-top: 3rem;
 }
 
 #skills-container div {
