--- a/css/main.css
+++ b/css/main.css
@@ -159,6 +159,10 @@ nav ul li a:hover {
   cursor: pointer;
 }
 
+.card img {
+  border-bottom: 1px solid #dedfe4;
+}
+
 /* Media Queries */
 
 @media only screen and (max-width: 1399px) {
